--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ body {
 
 .container {
   width: 100vw;
-  height: 100vh;
   background-color:#02061c;
   color: #f2f2f2;
 }
@@ -57,7 +56,7 @@ color:#EB6E38;
 /*FIN HEADER*/
 
 /*INICIA MAIN*/
-.main{
+.main__inicio{
   margin: 0 auto;
   width: 80vw;
   height: 80vh;
@@ -65,10 +64,10 @@ color:#EB6E38;
   grid-template-columns: repeat(2,1fr);
   align-items: center;
 }
-.main h1 {
+.main__inicio h1 {
   font-size:3em;
 }
-.main span{
+.main__inicio span{
   color: #EB6E38;
 }
 button{
@@ -290,6 +289,7 @@ button:hover{
 
 .footer__container h5{
   font-size: 1.5em;
+  padding: 0.5em;
 }
 .redesSociales{
   display: flex;
